Deleting unnecessary files from repository and fixing bugs with the addition of a new entry